# gedw

./: .gitignore  derivation.nix  meson.build
gedw/: find.sh  meson.build
gedw/include/: meson.build  util.h
gedw/include/gfx/: array.h  buffer.h  core.h  globject.h  program.h  renderer.h  renderobject.h
gedw/include/gfx/buffer/: index.h  vertex.h
gedw/include/math/: core.h  range.h  vec2.h
gedw/include/util/: slice.h  types.h
gedw/res/: shader.glsl
gedw/src/: Main.cpp  main.cpp  meson.build  pch.h
gedw/src/gfx/: Core.cpp  Core.h  array.cpp  core.cpp  globject.cpp  object.cpp  program.cpp  renderer.cpp  renderobject.cpp
gedw/src/gfx/buffer/: index.cpp  vertex.cpp
gedw/src/math/: All.h  Range.h  Vec2.h  core.cpp
gedw/src/pch/: gedw.h
src/: Main.cpp  pch.h
src/math/: Core.h
